// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkingLoginStatus returns false if no status 1`] = `
{
  "checkingLoginStatus": false,
  "fetchingChallenges": [],
}
`;

exports[`fetchingChallenges returns empty array if no status 1`] = `
{
  "checkingLoginStatus": false,
  "fetchingChallenges": [],
}
`;

exports[`mapStateToProps maps checkingLoginStatus 1`] = `
{
  "checkingLoginStatus": true,
  "fetchingChallenges": [],
}
`;

exports[`mapStateToProps maps fetchingChallenges 1`] = `
{
  "checkingLoginStatus": false,
  "fetchingChallenges": [
    "fetch123",
    "fetch456",
  ],
}
`;
